# HackAI-2026

./: .gitignore  README.md  extract-w2.py  extract.py  parse_w2.py  pyproject.toml
backend/: .env.example  README.md  requirements.txt
backend/app/: config.py  main.py
backend/app/db/: mongo.py
backend/app/models/: chatbot_models.py  parser_models.py  response_models.py  tax_session.py
backend/app/routes/: calculations.py  chatbot.py  health.py  parser.py  tax_session.py
backend/app/services/: calculation_service.py  chatbot_service.py  mongodb_service.py  parser_service.py
backend/app/utils/: constants.py  sample_data.py
backend/parser/: __init__.py  extract.py  parse_fields.py  utility.py
backend/sample_pdfs/: README.md
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
